Fix mobile project visibility and pinning issues

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -106,14 +106,15 @@
 }
 
 .character-model {
+  height: 80%;
   height: 80vh;
-  position: fixed;
+  position: absolute;
   max-width: 1920px;
   max-height: 1080px;
   transform: translateX(-50%);
   width: 100%;
   left: 50%;
-  z-index: 11;
+  z-index: 0;
   bottom: 20px;
   pointer-events: inherit;
 }
@@ -310,8 +311,8 @@
     font-size: 16px;
   }
   .character-model {
-    height: 70vh;
-    bottom: 20px;
+    height: 60vh;
+    bottom: 80px;
   }
 }
 
