--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -8,7 +8,8 @@
 }
 .work-section {
   transition: 0s;
-  height: 100vh;
+  height: var(--vh);
+  overflow: hidden;
   box-sizing: border-box;
   will-change: transform;
   z-index: 5;
@@ -48,7 +49,7 @@
 .work-flex::before,
 .work-flex::after {
   content: "";
-  width: calc(50000vw);
+  width: 500vw;
   height: 1px;
   background-color: #363636;
   position: absolute;
@@ -233,6 +234,17 @@
 @media only screen and (max-width: 1025px) {
   .work-container {
     align-content: normal;
+  }
+  .work-flex {
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    width: max-content;
+  }
+  .work-section {
+    height: var(--vh);
+    min-height: var(--vh);
+    overflow: hidden;
   }
 }
 
